@@ -4962,7 +4962,7 @@ store C into ':OUTPATH:';\,
             'tests' => [
                 {
                     'num' => 1,
-                    'java_params' => ['-Dopt.fetch=false'],
+                    'java_params' => ['-Dopt.fetch=false', '-Dpig.user.cache.enabled=true'],
                     'execonly' => 'mapred,tez,spark', # since distributed cache is not supported in local mode
                     'pig' => q?
                         register :FUNCPATH:/testudf.jar;
@@ -4979,6 +4979,7 @@ store C into ':OUTPATH:';\,
                 'tests' => [
                     {
                         'num' => 1,
+                        'java_params' => ['-Dpig.user.cache.enabled=true'],
                         'pig' => q?register :FUNCPATH:/testudf.jar;
                                 define gm org.apache.pig.test.udf.evalfunc.GoodMonitored();
                                 a = load ':INPATH:/singlefile/studenttab10k' as (name, age, gpa);
@@ -4989,6 +4990,7 @@ store C into ':OUTPATH:';\,
                                                 store b into ':OUTPATH:';?,
                     },{
                         'num' => 2,
+                        'java_params' => ['-Dpig.user.cache.enabled=true'],
                         'pig' => q?register :FUNCPATH:/testudf.jar;
                                 define bad org.apache.pig.test.udf.evalfunc.BadMonitored();
                                 a = load ':INPATH:/singlefile/studenttab10k' as (name, age, gpa);
@@ -5001,6 +5003,7 @@ store C into ':OUTPATH:';\,
                                                 store b into ':OUTPATH:';?,
                     },{
                         'num' => 3,
+                        'java_params' => ['-Dpig.user.cache.enabled=true'],
                         'pig' => q?register :FUNCPATH:/testudf.jar;
                                 define bad org.apache.pig.test.udf.evalfunc.BadMonitored();
                                 a = load ':INPATH:/singlefile/studenttab10k' as (name, age, gpa);
